--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 
 services:
   todoback:
-    build: ./todo-app/back-end
+    image: todobackend
     ports:
       - 3001:3001
 
   todofront:
-    build: ./todo-app/front-end
+    image: todofrontend
     ports:
       - 3000:3000
     depends_on:
@@ -16,7 +16,7 @@ services:
       - REACT_APP_API_HOST=todoback
 
   todotests:
-    build: ./todo-app/tests
+    image: todotests
     depends_on:
       - 'todofront'
       - 'todoback'
